# SimAI

./: .gitignore  README.md  Spectrum-X_16g_8gps_100Gbps_A100  Spectrum-X_8g_8gps_100Gbps_A100
astra-sim-alibabacloud/: build.sh
calendar_scheduler/: CMakeLists.txt
calendar_scheduler/include/: bvn_scheduler.h  calendar_scheduler.h  round_robin_scheduler.h  solstice_scheduler.h
calendar_scheduler/python/calendar_scheduler/: __init__.py  bvn.py  round_robin.py  solstice.py  types.py
calendar_scheduler/src/: bvn_scheduler.cc  round_robin_scheduler.cc  solstice_scheduler.cc
experiments/: llm_inference_64gpu_moe_mem_congestion.yaml  llm_inference_64gpu_moe_mem_congestion_quick.yaml  llm_inference_memory_sanity.yaml  llm_inference_moe_full_cosim.yaml  llm_inference_tps_matrix.yaml  llm_inference_tps_preview.yaml
outputs/debug_alltoall_ep_dynamic_packet_100_fix/: SimAI.conf  metadata.json  moe_gate_trace.json  workload.json
outputs/debug_alltoall_ep_dynamic_packet_100_fix_v2/: SimAI.conf  (+3 more)
scripts/: aggregate_tps_metrics.py  analyze_results.py  bench_calendar_schedule_runtime  bench_calendar_schedule_runtime.cpp  finish_calendar_gpu8_mixed_resume.sh  llm_inference_tps_matrix.py  run_calendar_study.sh  run_dynamic_packet_islip_smoke.sh  run_gpu8_moe_hotspot_compare.sh  run_single_experiment.sh
topologies/: Spectrum-X_16g_16port_calendar_no_nvswitch  Spectrum-X_8g_1gps_100Gbps_A100_no_nvswitch  Spectrum-X_8g_4gps_100Gbps_A100_2servers  Spectrum-X_8g_8port_packet_no_nvswitch  Spectrum-X_8g_8port_packet_no_nvswitch_400g
vidur-alibabacloud/: README.md  README_CN.md
(+51 files in other folders)
